Updated Win32 project to VS 2015 RC
-Added 64 bit target
-Set arch to AVX2
-Set fp mode to fpfast

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ Thumbs.db
 */Win32/**/Debug/
 */Win32/**/Release/
 */Win32/Nova/*.user
-*/Win32/*.suo
+*/Win32/**/*.suo
 */Win32/*.sdf
 */Win32/*.opensdf
