Added perspective correct diffuse texture mapping and bug fixes
-Minor refactoring
-Fixed bug in calculating face normals to cull triangles when rendering
-Fixed bug in interpolating lighting for each change in y
-A few tweaks to models

--- a/Platform/Win32/Nova/Nova.vcxproj
+++ b/Platform/Win32/Nova/Nova.vcxproj
@@ -22,12 +22,13 @@
     <ClCompile Include="..\..\..\Nova\nova_geometry.c" />
     <ClCompile Include="..\..\..\Nova\nova_math.c" />
     <ClCompile Include="..\..\..\Nova\nova_render.c" />
+    <ClCompile Include="..\..\..\Nova\nova_utility.c" />
+    <ClCompile Include="..\..\..\Nova\nova_utility.h" />
     <ClCompile Include="MainWin.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Nova\nova_geometry.h" />
     <ClInclude Include="..\..\..\Nova\nova_math.h" />
-    <ClInclude Include="..\..\..\Nova\nova_render.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C8256681-7E7B-47E9-BFD8-2032CA450E33}</ProjectGuid>
