--- a/Platform/Win32/Nova/Nova.vcxproj.filters
+++ b/Platform/Win32/Nova/Nova.vcxproj.filters
@@ -27,15 +27,18 @@
     <ClCompile Include="..\..\..\Nova\nova_render.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Nova\nova_utility.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Nova\nova_utility.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Nova\nova_geometry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Nova\nova_math.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Nova\nova_render.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
