--- a/Platform/Win32/Nova/Nova.vcxproj.filters
+++ b/Platform/Win32/Nova/Nova.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="..\..\..\Nova\nova_math.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Nova\nova_render.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
