Implemented barycentric triangle rasterization and refactored

--- a/Platform/Win32/Nova/Nova.vcxproj.filters
+++ b/Platform/Win32/Nova/Nova.vcxproj.filters
@@ -18,30 +18,24 @@
     <ClCompile Include="MainWin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Nova\nova_geometry.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Nova\nova_math.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\Nova\nova_render.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Nova\nova_utility.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Nova\nova_utility.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Nova\nova_geometry.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Nova\nova_math.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Nova\nova_render.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Nova\nova_utility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
