Implemented obj material file loading
-Can get diff materials and texture maps
-Not yet pulling and using other material properties

--- a/Platform/Win32/Benchmark/Benchmark.vcxproj
+++ b/Platform/Win32/Benchmark/Benchmark.vcxproj
@@ -142,6 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nova\Nova.vcxproj">
+      <Project>{7561106a-8bfa-4eb3-a895-0a8f0005dfcf}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
